fix profile image size on mobile

--- a/stylesheets/default.css
+++ b/stylesheets/default.css
@@ -292,7 +292,7 @@ footer nav a {display:inline;text-decoration:none;}
 	header div.intro h1 {text-align:center;}
 	header div.intro h1 img {margin:0 auto;text-align:center;}
 	.img-desktop, header div img.profile-id {display:none;}
-	header div img.mobile-only {display:block;position:inherit;width:80%;height:auto;margin:0 auto;}
+	header div img.mobile-only {display:block;position:inherit;width:70%;height:auto;margin:0 auto;}
 }
 
 .mobile-only {display:none;}
